# SDL2-

./: CMakeLists.txt  CMakePresets.json  README.md
src/: Game.cpp  Game.h  Object.h  Random.h  Scene.cpp  Scene.h  SceneEnd.cpp  SceneEnd.h  SceneMain.cpp  SceneMain.h  SceneTitle.cpp  SceneTitle.h  main.cpp
